# alumnium-cucumber

./: LICENSE  README.md  behave.ini  setup.cfg
.github/workflows/: ci.yml  release.yml
alumniumcucumber/: __init__.py  adapter.py
alumniumcucumber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alumniumcucumber/reporting/: __init__.py  analyser.py  bridge.py  cli.py  generator.py  models.py  narrative.py  reporter.py  server.py
examples/: compliance.feature  environment.py  saucedemo.feature
examples/steps/: alumnium_steps.py
tests/fixtures/: sample_run.json
tests/reporting/: test_analyser.py  test_bridge.py  test_generator.py  test_models.py  test_narrative.py
