[metadata]
name = alumniumcucumber
version = 0.1.0
author = neuno.ai
description = Zero-code Gherkin/BDD adapter for Alumnium
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/iammac2/alumnium-cucumber
python_requires = >=3.10

[options]
packages = find:
install_requires =
    alumnium[playwright]
    behave
